		System: added Moroccan dirham as a currency option
		System: upgraded jQuery to v2.2.4 and jQuery Migrate to v1.4.1
		System: fixed bug preventing jQuery Chained from working properly
		System: allow user login with either username or email, if email is unique
		Activities: Added optional permission for activity organisers to manage their activities enrolment
		Attendance: added ability (off by default) for students to register themselves as Present, when within a set of IP addresses
		Attendance: added explicitly stored context recording where attendance was taken
		Attendance: added settings to determine pre-filling of attendance in different contexts
		Attendance: added settings to determine default type in different contexts
		Attendance: added dynamic legend for Student History report
		Finance: added ability to bulk issue invoices without sending email
		Finance: tweaked interface for display of payment log to make it more usable
		Formal Assessment: added subject name column to Internal Assessment view
		Library: added new type to store Audio/Visual equipment
		Markbook: Added a class average row to the bottom of markbook views (when Weighting is enabled)
		Students: added ability to store internal documents against student application forms
		Students: fixed bug preventing upload of application form documents when cookies disabled
		Students: fixed bug preventing some application form language/citizenship fields from not being saved
		Students: added settable thresholds for issuing academic alerts
		Students: added settable thresholds for issuing behaviour alerts
		Timetable Admin: fix bulk checking bug in Tie Days to Dates

v13.0.01
--------
Tweaks & Bug Fixes
	System: installer adjusted to provide compatibility with Softaculous
	System: fixed Resource tag issue in demo data
	Resources: fixed PHP notice in View Resources

v13.0.00
--------
	Headlines
		Automated Scope & Sequence documentation in Planner, based on Unit Planner