@@ -778,11 +778,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Activities/activities_mana
 							} catch (PDOException $e) {
 							}
 							while ($rowSelect = $resultSelect->fetch()) {
-								$selected = '';
-								if ($row['gibbonPersonIDStatusResponsible'] == $rowSelect['gibbonPersonID']) {
-									$selected = 'selected';
-								}
-								echo "<option $selected value='".$rowSelect['gibbonPersonID']."'>".formatName('', htmlPrep($rowSelect['preferredName']), htmlPrep($rowSelect['surname']), 'Student', true)."$expected</option>";
+								echo "<option value='".$rowSelect['gibbonPersonID']."'>".formatName('', htmlPrep($rowSelect['preferredName']), htmlPrep($rowSelect['surname']), 'Student', true)."</option>";
 							}
 							echo '</optgroup>'; ?>
 						</select>
